--- a/css/styles.css
+++ b/css/styles.css
@@ -740,7 +740,7 @@ input:focus+svg {
 }
 
 .comment-cont {
-    margin-bottom: 24px;
+    margin-bottom: 16px;
 }
 
 .textarea-form {
@@ -761,6 +761,10 @@ input:focus+svg {
 
 .textarea-form:focus {
     border-color: #4d5ae5;
+}
+
+.check-cont {
+    margin-bottom: 24px;
 }
 
 .modal-check-text {
@@ -800,6 +804,7 @@ input:focus+svg {
     align-items: center;
     justify-content: center;
     fill: transparent;
+    display: inline-flex;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         border 250ms cubic-bezier(0.4, 0, 0.2, 1),
         fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
