--- a/css/styles.css
+++ b/css/styles.css
@@ -777,15 +777,9 @@ input:focus+svg {
     gap: 8px;
 }
 
-.modal-check-text span {
-    width: 16px;
-    height: 16px;
-    display: inline-flex;
+.modal-check-text {
     align-items: center;
-    justify-content: center;
-    border-radius: 2px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    fill: transparent;
+    justify-content: center
 }
 
 .modal-check:checked+label>span {
@@ -804,7 +798,6 @@ input:focus+svg {
     align-items: center;
     justify-content: center;
     fill: transparent;
-    display: inline-flex;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         border 250ms cubic-bezier(0.4, 0, 0.2, 1),
         fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
