--- a/css/styles.css
+++ b/css/styles.css
@@ -609,7 +609,6 @@ background-color: #31d0aa;
     border: none;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: flex;
-    gap: 16px;
 }
 
 .footer-btn:hover,
@@ -620,6 +619,7 @@ background-color: #31d0aa;
 .footer-btn-icon {
     fill: #ffffff;
     margin-right: 16px;
+    margin-left: 16px;
 }
 
 
