--- a/css/styles.css
+++ b/css/styles.css
@@ -645,7 +645,7 @@ background-color: #31d0aa;
 }
 
 .modal {
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
     width: 408px;
