--- a/css/styles.css
+++ b/css/styles.css
@@ -800,9 +800,6 @@ input:focus+svg {
     fill: #f4f4fd;
 }
 
-.span-check {
-display: inline-flex;
-}
 
 .span-check {
     width: 16px;
@@ -810,7 +807,7 @@ display: inline-flex;
     margin-right: 8px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 2px;
-    display: inline-flex;
+    display: flex;
     align-items: center;
     justify-content: center;
     fill: transparent;
