--- a/css/styles.css
+++ b/css/styles.css
@@ -789,12 +789,16 @@ input:focus+svg {
 }
 
 .modal-check-text {
-    align-items: center;
-    justify-content: center;
     display: flex;
+        gap: 8px;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+        align-items: center;
 }
 
-.modal-check:checked+label>span {
+.modal-check:checked + label > span {
     background-color: #404bbf;
     border: none;
     fill: #f4f4fd;
@@ -802,19 +806,16 @@ input:focus+svg {
 
 
 .span-check {
-    width: 16px;
-    height: 16px;
-    margin-right: 8px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    border-radius: 2px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    fill: transparent;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+        width: 16px;
+        height: 16px;
+        border-radius: 2px;
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        fill: transparent;
+    }
 
 .privacy {
     line-height: 1.33;
