--- a/css/styles.css
+++ b/css/styles.css
@@ -659,8 +659,8 @@ background-color: #31d0aa;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop: not(.is-open) .modal {
-    transform: translate(-50%, -100%);
+.backdrop:not(.is-open) .modal {
+    transform: translate(-50%, -50%) scale(1.5);
 }
 
 .modal-close-btn {
@@ -842,6 +842,14 @@ input:focus+svg {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.btn-send:hover {
+    background: #404bbf;
+}
+
+.btn-send:focus {
+    background: #404bbf;
+}
+
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -854,5 +862,3 @@ input:focus+svg {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-
-/*--------ENDMODAL--------*/
